@@ -92,6 +92,10 @@ mjb.newcount=0
 # List of extensions to skip when generating a playlist
 mjb.playlist.IgnoreExtensions=img,iso
 
+# Generate multipart playlists that allows the cycling of video parts.
+# Note that this may break some skins that use this feature if it is disabled.
+mjb.playlist.generateMultiPart=true
+
 # Force encoding of XBMC XML in the NFO files if not specified in standard way within XML
 # Set the parameter to AUTO or remove it to turn off the forced encoding
 # Example:
