@@ -4,7 +4,8 @@
 
 MovieJukebox 1.7 BETA
 ---------------------
-  - Enhancement   #358 Intuitive movie highlight when surfing up/down pages in the movies index (default skin)  
+  - Enhancement   #358 Intuitive movie highlight when surfing up/down pages in the movies index (default skin)
+  - Enhancement   #811 Property to disable multipart playlists
   - Enhancement   #983 Add file date to the basename.xml files
   - Fixed defect #1050 YAMJ doesn't include myiHome server IP in *.playlist.jsp
   - Fixed defect #1067 No more fanart displayed with Allocine plugin
